fix - align sticky header and things

--- a/src/components/about_compo/sticky_header/Stikcy.module.css
+++ b/src/components/about_compo/sticky_header/Stikcy.module.css
@@ -119,7 +119,7 @@
 
 @media (max-width:420px) {
     .sticky_container {
-        top: 110px !important;
+        top: 125px !important;
         width: 75%;
         /* border: 1px solid lime; */
     }
