--- a/src/components/news_compo/sticky_header/Stikcy.module.css
+++ b/src/components/news_compo/sticky_header/Stikcy.module.css
@@ -87,7 +87,6 @@
 @media (max-width:420px) {
     .sticky_container {
         top: 70px !important;
-        
-        top: 110px !important;
+        top: 125px !important;
     }
 }
