--- a/src/components/resource_compo/sticky_header/Stikcy.module.css
+++ b/src/components/resource_compo/sticky_header/Stikcy.module.css
@@ -120,8 +120,7 @@
 @media (max-width:420px) {
     .sticky_container {
         top: 160px !important;
-        
-        top: 110px !important;
+        top: 125px !important;
         width: 75%;
         /* border: 1px solid lime; */
     }
